[package]
name = "sea-asm"
version = "0.1.0"
edition = "2021"
authors = ["Cayden Lund <caydenlund@gmail.com>"]
description = "SeaFlow assembly component"
license = "MIT OR Apache-2.0"
repository = "https://github.com/caydenlund/seaflow.git"
readme = "README.md"
keywords = ["compiler", "ir", "sea-of-nodes", "assembly"]
categories = ["compilers"]

[dependencies]
