[package]
name = "sea-lex"
version = "0.1.0"
edition = "2021"
authors = ["Cayden Lund <caydenlund@gmail.com>"]
description = "SeaFlow lexer component"
license = "MIT OR Apache-2.0"
repository = "https://github.com/caydenlund/seaflow.git"
readme = "README.md"
keywords = ["compiler", "ir", "sea-of-nodes", "lexer"]
categories = ["compilers"]

[dependencies]
regex = "1.11.1"
thiserror = "2.0.12"

sea-lex-derive = { version = "0.1.0", path = "sea-lex-derive" }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "2.0", features = ["full"], optional = true }

[features]
default = ["derive"]
derive = ["dep:proc-macro2", "dep:quote", "dep:syn"]
