[package]
name = "sea-lex-derive"
version = "0.1.0"
edition = "2021"
authors = ["Cayden Lund <caydenlund@gmail.com>"]
description = "Derive macros for sea-lex"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }